# grx

./: .gitignore  CMakeLists.txt  README.md  README_HOW_TO_CONTROL.txt  TODO.md  nodes_demos.md  vcpkg.json
app/: CMakeLists.txt  game_application.cpp  game_application.hpp  main.cpp  settings.hpp
app/instanced_generators/: generators.cpp  generators.hpp
app/nodes/: movement_node.cpp  movement_node.hpp  rotating_node.cpp  rotating_node.hpp
core/: CMakeLists.txt
core/include/: graphics_pipeline.hpp  iapplication.hpp  main_manager.hpp  resource_manager.hpp
core/include/managers/: abstract_manager.hpp  base_manager.hpp  base_resource_manager.hpp  graphics_manager.hpp  manager_consts.hpp  manager_enum.hpp  scene_manager.hpp
core/include/nodes/: base_node.hpp  base_node_instance.hpp  camera_node.hpp  light_node.hpp  mesh_instanced_node.hpp  mesh_node.hpp  node_factory.hpp  node_instance.hpp  render_node.hpp  skybox_node.hpp  template_node.hpp  toml_value_initializers.hpp  triangle_debug_node.hpp
core/include/opengl/: error_manager.hpp  program.hpp
core/include/res/: base_resource.hpp  component.hpp  config.hpp  cubemap_texture.hpp  input_struct.hpp  instanced_generator_base.hpp  material.hpp  mesh.hpp  model.hpp  object.hpp  scene.hpp  texture.hpp
core/include/res/opengl/: light_ssbo.hpp  object_ssbo.hpp  program.hpp  program_bindings.hpp  shader.hpp
core/libs/: glad_include.hpp  gvector.hpp  mylib.hpp  open_gl_error.hpp
core/src/: iapplication.cpp
core/src/managers/: graphics_manager.cpp  scene_manager.cpp
core/src/nodes/: base_node.cpp  base_node_instance.cpp  camera_node.cpp  light_node.cpp  mesh_instanced_node.cpp  mesh_node.cpp  node_factory.cpp  render_node.cpp  skybox_node.cpp  template_node.cpp  triangle_debug_node.cpp
core/src/res/: cubemap_texture.cpp  material.cpp  mesh.cpp  scene.cpp  texture.cpp
core/src/res/opengl/: program.cpp  shader.cpp
docs/: argouml.zargo  argouml.zargo~
docs/old/: argouml_v1.zargo
res/materials/: Asteroid2.mtl  FA59AMako.mtl  Stone.mtl  Venus_1K.mtl  corruscant.mtl  earth.mtl  moon.mtl  plane.mtl  wood_blade.mtl
res/programs/: basic_phong.toml  demo_programs.toml  mesh_test.toml  phong_D.toml  phong_DN.toml  phong_DNS.toml  phong_DNSM.toml  phong_DN_instanced.toml  skybox.toml  triangle_test.toml
res/scenes/: demo.toml  main.toml  main_backup.toml  test_triangles.toml
res/shaders/: demo_programs.toml  main.frag  main.vert  mesh_test.frag  mesh_test.vert  phong_D.frag  phong_D.vert  phong_DN.frag  phong_DN.vert  phong_DNS.frag  phong_DNSM.frag  phong_DN_instanced.frag  phong_DN_instanced.vert  programs.toml  skybox.frag  skybox.vert  triangle_test.frag  triangle_test.vert
src/: CMakeLists.txt  game_application.cpp  game_application.hpp  main.cpp
